# shuttle

./: .gitignore  Cargo.toml  README.md
artifacts/: register.abi
contract/: truffle-config.js
contract/contracts/: Registry.sol
contract/migrations/: 2_deploy_contracts.js
src/: cli.rs  error.rs  eth.rs  ipfs.rs  main.rs
